<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peepy</string>
    <string name="version_number">Version number: </string>
    <string name="tv_about">This app was made for you to get your message out.</string>

    // Login screen
    <string name="et_username">Peepy Name</string>
    <string name="et_password">Password</string>

    <string name="btn_signin">sign in</string>
    <string name="btn_createaccount">create account</string>

    // Chat screen
    <string name="sign_out">sign out</string>
    <string name="about">about</string>

</resources>
