<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/peepy_background"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/peepy_logo_login"
            android:layout_gravity="top"
            android:contentDescription="peepy_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="31sp"
            android:id="@+id/tv_appName"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/peepy_title" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_about"
            android:id="@+id/tvAbout"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/peepy_slogan"
            android:layout_marginTop="40sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_number"
            android:id="@+id/tvVersionNumber"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/peepy_slogan"
            android:layout_below="@+id/tvAbout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10sp" />
    </RelativeLayout>

</LinearLayout>